added prop in project.js to be used multiple times throughout portfolio, added email.js to send me emails when contact form is submitted

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ body {
 
 .navbarName img {
   width: 220px;
+  cursor: pointer;
 }
 
 .navbarRight {
@@ -44,6 +45,7 @@ body {
 .navbarRight li a {
   text-decoration: none;
   color: green;
+  cursor: pointer;
   font-weight: 500;
   font-size: 27px;
   padding: 0 15px;
