--- a/src/App.css
+++ b/src/App.css
@@ -311,3 +311,40 @@ button {
   margin-top: 20px;
   padding: 10px 15px;
 }
+
+.mainFooter {
+  width: 100%;
+  height: 100px;
+  position:fixed;
+  bottom: 0;
+  background: rgb(29, 29, 29);
+  z-index: 1;
+}
+
+.footerContainer {
+  display: flex;
+  height: 100px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footerUl {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.footerUl li {
+  width: 50px;
+  height: 50px;
+  border: 2px solid green;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+}
+
+.footerUl img {
+  height: 30px;
+}
